bitnami/git/git-main/kpt2/deployment.yaml
---
# Source: gitea/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: git
  namespace: "git"
  labels:
    app.kubernetes.io/name: git
    app.kubernetes.io/instance: git
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: git
      app.kubernetes.io/instance: git
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: git
        app.kubernetes.io/instance: git
      annotations:
    spec:
      
      serviceAccountName: git
      securityContext:
        fsGroup: 1001
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: git
                    app.kubernetes.io/instance: git
                namespaces:
                  - "git"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      priorityClassName: ""
      containers:
        - name: git
          image: docker.io/bitnami/gitea:1.18.3-debian-11-r9
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          ports:
            - name: http
              containerPort: 3000
            - name: ssh
              containerPort: 2222
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 600
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 5
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: git-data
              mountPath: /bitnami/gitea
      volumes:
        - name: git-data
          persistentVolumeClaim:
            claimName: git
