bitnami/git/git-main/kpt2/svc.yaml
---
# Source: gitea/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: git
  namespace: "git"
  labels:
    app.kubernetes.io/name: git
    app.kubernetes.io/instance: git
spec:
  type: LoadBalancer
  sessionAffinity: None
  externalTrafficPolicy: "Cluster"
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: ssh
      port: 22
      targetPort: ssh
  selector:
    app.kubernetes.io/name: git
    app.kubernetes.io/instance: git
